add form for connectin this BD

--- a/stressProject/stressProject/stressProject.csproj
+++ b/stressProject/stressProject/stressProject.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.ReportingServices.ReportViewerControl.Winforms" Version="150.1449.0" />
     <PackageReference Include="Microsoft.SqlServer.Types" Version="14.0.1016.290" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+    <PackageReference Include="Twilio" Version="5.60.0" />
   </ItemGroup>
 
   <ItemGroup>
